--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "react-slick": "^0.29.0",
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
+    "start": "^5.1.0",
     "tailwindcss": "^3.3.3",
     "typescript": "^4.9.5",
+    "watch": "^1.0.2",
     "web-vitals": "^2.1.4"
   },
   "watch": {
