--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "redux-persist": "^6.0.0",
+    "session": "^0.1.0",
     "slick-carousel": "^1.8.1",
     "start": "^5.1.0",
     "tailwindcss": "^3.3.3",
