서버쪽 이미지 접근안됨 서버 작업 필요

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^40.2.0",
     "@ckeditor/ckeditor5-react": "^6.2.0",
+    "@ckeditor/ckeditor5-upload": "^40.2.0",
     "@fullpage/react-fullpage": "^0.1.40",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
