--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "session": "^0.1.0",
     "slick-carousel": "^1.8.1",
     "start": "^5.1.0",
+    "swiper": "^11.0.5",
     "tailwindcss": "^3.3.3",
     "typescript": "^4.9.5",
     "watch": "^1.0.2",
